progressi nav bar

--- a/index.html
+++ b/index.html
@@ -13,11 +13,29 @@
 
     <header>
         <container>
-            <nav>
+            <nav class="main-menu">
 
-               <div></div>
-               <div></div>
-               <div></div>
+               <div class="main logo">
+                   <img src="img/logo.svg" alt="official-logo">
+               </div>
+
+               
+               <div class="main nav">
+                   <ul>
+                        <li>a</li>
+                        <li>b</li>
+                        <li>c</li>
+                        <li>d</li>
+                   </ul>
+                </div>
+
+               <div class="second-nav">
+                   <ul>
+                        <li>a</li>
+                        <li>b</li>
+                        <li>c</li>
+                   </ul>
+                </div>
 
 
             </nav>
@@ -25,7 +43,7 @@
     </header>
 
 
-
+<!--
 
     <section>
         <container class="hero">
@@ -69,7 +87,7 @@
 
     <footer></footer>
 
-
+-->
 
 
 
