--- a/index.html
+++ b/index.html
@@ -154,6 +154,28 @@
 
 
 
-<div class="wrapper footer"></div>
+<div class="wrapper footer clearfix">
+
+        <div class="row">
+            <div class="mini-box">
+                    <h2>Struttura un piano</h2>
+            </div>
+
+            <div class="mini-box">
+                <form class="action" action="#">
+                    <label for="#">Sono </label>
+                    <select name="options">
+                      <option value="#">Seleziona</option>
+                      <option value="#">Seleziona</option>
+                      <option value="#">Seleziona</option>
+                      <option value="#">Seleziona</option>
+                    </select>
+                    <button class="button-footer green ">VISUALIZZA IL TUO PIANO</button>
+                </form>
+            </div>
+            
+            
+        </div>
+</div>
 </body>
 </html>
